# FluentOS

./: CMakeLists.txt  README.md  build.sh
resources/: qml.qrc
src/: .qmlls.ini  CMakeLists.txt  main.cpp
src/backend/: systemstate.cpp  systemstate.h
src/backend/dbus/: dbuswrapper.cpp  dbuswrapper.h
src/compositor/: compositor.h
src/shell/qml/: Constants.qml  Icon.qml  IconButton.qml  Theme.qml  main.qml  qmldir
src/shell/topbar/: ApplicationTitle.qml  BatteryIndicator.qml  Clock.qml  MediaBar.qml  NotificationCenter.qml  StatusArea.qml  TopBar.qml  topbar.cpp  topbar.h
